--- a/README
+++ b/README
@@ -7,10 +7,10 @@ Q: Why limit yourself to 6 items?
 A: First of all, this is a 'main' todo list. It's not necessarily the only
    list you'll make in a given day. For example, my main todo list in todo6
    might contain "shopping" but actual shopping list (bananas, eggs, OJ) 
-   would be in a separate list on my iPhone, for example. I also like to
-   make separate "focus" lists in a productivity app such as a "Pomodoro"
-   app where my todo6 list might say "Read chapter 5 of Programming Python"
-   and my pomodoro list would have focused task items such as "Do exercise 1",
+   would be in a separate list on my iPhone. I also like to make separate
+   "focus" lists in a productivity app such as a "Pomodoro" app where my
+   todo6 list might say "Read chapter 5 of Programming Python" and my 
+   Pomodoro list would have focused task items such as "Do exercise 1",
    "Do exercise 2", etc.
 
    I believe in the "don't put more than 6 items on a todo list" philosophy 
